--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,128 @@ main{
     height: 100vh;
 }
 
+main h2{
+    margin-top: 10px;
+}
+
 .div-set{
-    width: 90%;
+    margin-top: 50px;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.div-set h2{
+    margin-top: 20px;
+    width: 100%;
+}
+
+
+/* set card HOME PAGE*/
+.card-set{
+    /* height: 450px; */
+    width: 22%;
+    border: 1px solid gainsboro;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    
+}
+
+.card-set img{
+   height: auto;
+   width: 70%;
+}
+
+.text-set{
+   line-height: 23px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 20px;
+}
+
+.text-set p{
+    margin-top: 5px;
+    font-size: 13px;
+    font-family: italic;
+}
+
+.text-set button{
+    border: 2px solid  greenyellow;
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+/* finish set card */
+
+
+
+/* set card REVIEWS PAGE*/
+.div-set-reviews{
+    margin-top: 50px;
+    width: 80%;
+}
+.card-set-reviews{
+    height: 300px;
+    width: 100%;
+    border: 1px solid gainsboro;
+    display: flex;
+}
+
+.card-set-reviews img{
+    height: auto;
+}
+
+.text-set-reviews{
+    line-height: 23px;
+    margin: 20px;
+}
+
+
+.text-set-reviews p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 17px;
+    font-style: italic;
+}
+
+.div-set section{
+    display: flex;
+    justify-content: space-between;
     margin-top: 50px;
 }
+
+.card-vote{
+    border: 1px solid gainsboro;
+    height: 100px;
+    margin-top: 50px;
+    padding: 10px;
+}
+
+.card-vote h4{
+    padding-top: 10px;
+}
+.card-vote p{
+   font-size: 12px;
+   font-style: italic;
+}
+
+.button-back{
+    display: flex;
+    justify-content: end;
+}
+.button-back button{
+    border: 2px solid  greenyellow;
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-top: 10px;
+    
+}
+
+/* finish set card  reviews*/
