--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 /* Header set */
 header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100px;
     color: white;
