--- a/src/index.css
+++ b/src/index.css
@@ -29,14 +29,28 @@ header a:hover {
 }
 
 /* Main set */
+@keyframes gradientAnimation {
+    0% {
+        background: linear-gradient(45deg, #000000, #00FF00); /* Nero a verde chiaro */
+    }
+    50% {
+        background: linear-gradient(45deg, #333333, #66FF66); /* Grigio scuro a verde più chiaro */
+    }
+    100% {
+        background: linear-gradient(45deg, #000000, #00FF00); /* Torna a nero e verde chiaro */
+    }
+}
 main {
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    animation: gradientAnimation 10s ease infinite; /* Animazione del gradiente */
+    background: linear-gradient(45deg, #000000, #00FF00); /* Gradiente iniziale da nero a verde chiaro */
+    
 }
 
 main h2 {
     margin-top: 10px;
+    color: white;
 }
 
 .div-set {
@@ -56,13 +70,14 @@ main h2 {
 
 .card-set {
     width: 400px;
-    border: 1px solid gainsboro;
+    border: 1px solid #666666; 
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 15px;
     border-radius: 20px;
-    background-color: whitesmoke;
+    background-color: #2b2b2b;
+    color: white;
 }
 
 .card-set img {
@@ -87,7 +102,7 @@ main h2 {
 }
 
 .text-set button {
-    border: 2px solid greenyellow;
+    border: 2px solid #00FF00;
     background-color: black;
     color: white;
     padding: 10px 20px;
@@ -120,10 +135,11 @@ main h2 {
 .card-set-reviews {
     height: 300px;
     width: 100%;
-    border: 1px solid gainsboro;
+    border: 1px solid #666666;
     display: flex;
     border-radius: 20px;
-    background-color: whitesmoke;
+    background-color: #333333;;
+    color: white;
 
 }
 
@@ -152,13 +168,13 @@ main h2 {
 }
 
 .card-vote {
-    border: 1px solid gainsboro;
+    border: 1px solid #666666;
     height: 100px;
     margin-top: 50px;
     padding: 10px;
     border-radius: 20px;
-    background-color: whitesmoke;
-
+    background-color: #2b2b2b;
+    color: white;
 }
 
 .card-vote h4 {
@@ -176,7 +192,7 @@ main h2 {
 }
 
 .button-back button {
-    border: 2px solid greenyellow;
+    border: 2px solid #00FF00;
     background-color: black;
     color: white;
     padding: 10px 20px;
@@ -196,12 +212,36 @@ main h2 {
 /* FORM SET */
 .container{
     border-radius:20px;
-  background-color: whitesmoke;
+    background-color: #2b2b2b;
+    color: white;
+    border: 1px solid #666666;
 }
 
 .set{
-    border:2px solid greenyellow;
+    border:2px solid #00FF00;
     background-color: black;
     color: white;
     padding: 10px 20px;
+}
+
+.container .form-control {
+    background-color: #333 !important; 
+    color: #fff !important;
+}
+
+.container .form-control::placeholder{
+    color: #fff !important;
+}
+
+.container .form-control::placeholder{
+    color: #fff !important;
+}
+#section-media{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.set-height{
+    height: 100vh;
 }
